--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      .maiden   img#star{border-radius:50%; border: 1px rgb(0,168,119);}
      div.container .link1 { background-color:#FDB915; color: #224093; font-size:24px; line-height: 36px; font-weight:500; text-decoration: none; padding: 10px 220px 10px 220px;  margin: 30px 0px 10px 0px;}
      div.container .link2 { color: #224093; border: 1px solid #224093; font-size: 24px; line-height: 36px; font-weight:500; text-decoration: none; padding: 10px 220px 10px 220px; margin: 30px 0px 10px 30px;}
-
+    div.linear_gradient{ background-color: ;}
     </style>
 </head>
 <body>
@@ -61,6 +61,11 @@
 
         <div class="container my-4">
             <a class="link1" href=""> BUY TICKETS</a> <a class="link2" href=""> BECOME A SPONSOR</a>
+        </div>
+
+        <div class=" linear_gradient container my-1" >
+          <p mx-auto> Venue:</p>
+
         </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
