--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
      .maiden   img#star{border-radius:50%; border: 1px rgb(0,168,119);}
      div.container .link1 { background-color:#FDB915; color: #224093; font-size:24px; line-height: 36px; font-weight:500; text-decoration: none; padding: 10px 220px 10px 220px;  margin: 30px 0px 10px 0px;}
      div.container .link2 { color: #224093; border: 1px solid #224093; font-size: 24px; line-height: 36px; font-weight:500; text-decoration: none; padding: 10px 220px 10px 220px; margin: 30px 0px 10px 30px;}
-    div.linear_gradient{ background-color: ;}
+    div.linear_gradient{ background-image: linear-gradient(to right, #BE8D16,#5576CF , #5576CF); 
+                      color:white; text-align: center; }
+    div.linear_gradient  #venue, #date {font-size: 50px;}
     </style>
 </head>
 <body>
@@ -63,10 +65,17 @@
             <a class="link1" href=""> BUY TICKETS</a> <a class="link2" href=""> BECOME A SPONSOR</a>
         </div>
 
-        <div class=" linear_gradient container my-1" >
-          <p mx-auto> Venue:</p>
-
+        <div class=" linear_gradient container  my-1 mx-auto" >
+          <p class="fs-5 mx-auto" id="venue" style="font-size: 50px;" > Venue:</p>
+          <p class="mx-auto" > The International Conference Center, Agbowo, Ibadan.</p>  <br> <br>
+          <p class="fs-5 mx-auto" id="date" size="font-size:50px"> Date:</p>
+          <p class="fs-5 mx-auto"> Saturday, September 9th, 2023.</p>
         </div>
+
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
